--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -9,7 +9,7 @@
     <input type="text" id="post-title" value="{{post.title}}" class="form-input" />
 
     <label class="form-label" for="post-body">Content</label>
-    <textarea id="post-body" class="form-input">{{post.body}}</textarea>
+    <textarea id="post-content" class="form-input">{{post.content}}</textarea>
 
     <button type="submit" class="btn">Update</button>
 
