--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,7 +13,7 @@
         <input type="password" id="password-signup" />
       </div>
       <button type="submit" id="submit" class="btn" >Signup!</button>
-      <a href="/login">Login instead</a>
+      <a href="/login">I already have an account</a>
     </form>
   </div>
 </div>
