--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,7 @@
         <a href="/post/{{id}}">{{title}}</a>
       </h2>
       <div>
-        Posted by {{User.username}} on {{createdAt}}
+        Posted by test {{User.username}} on {{createdAt}}
       </div>
     </div>
     <div class="card-body">
